<resources>
    <string name="app_name">Expense Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>






    <string name="managment">Managment</string>
    <string name="account">Account</string>
    <string name="delete_category">Delete Category</string>
    <string name="language">Language</string>
    <string name="abcc">abc</string>
    <string name="configration">Configration</string>
    <string name="select_currency">Select Currency</string>
    <string name="pkr">PKR</string>
    <string name="usdt">USDT</string>
    <string name="euro">EURO</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="bills">Bills</string>
    <string name="cloth">Cloth</string>
    <string name="education">Education</string>
    <string name="entertainment">Entertainment</string>
    <string name="fitness">Fitness</string>
    <string name="food">Food</string>
    <string name="gifts">Gifts</string>
    <string name="health">Health</string>
    <string name="furniture">Furniture</string>
    <string name="pet">Pet</string>
    <string name="expenseamount">expenseAmount</string>
    <string name="expensedescription">expenseDescription</string>
    <string name="expensewallet">expenseWallet</string>
    <string name="selectedcategory">selectedCategory</string>
    <string name="enter_amount_to_continue">Enter Amount to Continue</string>
    <string name="categorytype">categoryType</string>
    <string name="expense">EXPENSE</string>
    <string name="please_enter_a_valid_amount">Please Enter a Valid amount</string>
    <string name="expensemanager">ExpenseManager</string>
    <string name="please_select_an_account_first">Please Select an account First</string>
    <string name="account_not_found">Account not found</string>
    <string name="expense_saved_successfully">Expense saved successfully</string>
    <string name="date_picker">DATE_PICKER</string>
    <string name="select_time">Select Time</string>
    <string name="time_picker">TIME_PICKER</string>
    <string name="dd_mm_yyyy_hh_mm_a">dd/MM/yyyy   hh:mm a</string>
    <string name="income">INCOME</string>
    <string name="account_name">ACCOUNT_NAME</string>
    <string name="incomeamount">incomeAmount</string>
    <string name="incomedescription">incomeDescription</string>
    <string name="incomewallet">incomeWallet</string>
    <string name="selected_account">SELECTED_ACCOUNT</string>
    <string name="income_saved_successfully">Income saved successfully</string>
    <string name="select_date">Select Date</string>
    <string name="edit_account">Edit Account</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="account_name_cannot_be_empty">Account name cannot be empty</string>
    <string name="account_updated">Account updated</string>
    <string name="delete_account">Delete Account</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete \"%1$s\"?</string>
    <string name="delete">Delete</string>
    <string name="account_deleted">Account deleted</string>
    <string name="currency">CURRENCY</string>
    <string name="app_language">APP_LANGUAGE</string>
    <string name="en">en</string>
    <string name="english">English</string>
    <string name="ur">ur</string>
    <string name="done">DONE</string>
    <string name="system_default">System default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="theme">Theme</string>
    <string name="statistics_to_transactions">statistics_to_transactions</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="are_you_sure_you_want_to_delete_this_transaction">Are you sure you want to delete this transaction?</string>
    <string name="deleted_income_categories">DELETED_INCOME_CATEGORIES</string>
    <string name="allowance">Allowance</string>
    <string name="award">Award</string>
    <string name="bonus">Bonus</string>
    <string name="dividend">Dividend</string>
    <string name="investment">Investment</string>
    <string name="lottery">Lottery</string>
    <string name="salary">Salary</string>
    <string name="tips">Tips</string>
    <string name="business">Business</string>
    <string name="others">Others</string>
    <string name="add_account">Add Account</string>
    <string name="choose_your_currency">Choose your Currency</string>
    <string name="cash">Cash</string>
    <string name="rs_1_000">-Rs. 1,000</string>
    <string name="_2_43_pm">2:43 pm</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="wallet">Wallet</string>
    <string name="category">Category</string>
    <string name="balance">Balance</string>
    <string name="opening_balance">Opening balance</string>
    <string name="rs_0">Rs. 0</string>
    <string name="ending_balance">Ending balance</string>
    <string name="xmlincome">Income</string>
    <string name="xmlexpense">Expense</string>
    <string name="_rs_0">-Rs. 0</string>
    <string name="total">Total</string>
    <string name="show_more">Show more</string>
    <string name="expense_structure">Expense Structure</string>
    <string name="overview">Overview</string>
    <string name="i">i</string>
    <string name="skip">SKIP</string>
    <string name="initial_amount">Initial Amount</string>
    <string name="how_much_money_do_you_have_in_your_cash_wallet">How much money do you have in your cash wallet?</string>
    <string name="_0">$ 0</string>
    <string name="choose_a_name_for_your_account">Choose a name for your account</string>
    <string name="name">Name</string>



    <string name="transacton">Transacton</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="statictics">Statictics</string>


</resources>