<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/card_background"
    android:paddingStart="20dp"
    android:paddingTop="14dp"
    android:paddingEnd="20dp"
    android:paddingBottom="14dp">


    <!-- Category Icon -->

    <ImageView
        android:id="@+id/SettingTransactionIcon"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Category -->

    <TextView
        android:id="@+id/SettingTransactionCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/food"
        android:textColor="@color/text_primary"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/SettingTransactionIcon"
        app:layout_constraintTop_toTopOf="@id/SettingTransactionIcon"
        app:layout_constraintEnd_toStartOf="@id/SettingTransactionAmount" />


    <!-- Wallet -->

    <TextView
        android:id="@+id/SettingTransactionWallet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/cash"
        android:textColor="@color/text_secondary"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/SettingTransactionCategory"
        app:layout_constraintTop_toBottomOf="@id/SettingTransactionCategory"
        app:layout_constraintEnd_toStartOf="@id/SettingTransactionAmount" />


    <!-- Amount -->

    <TextView
        android:id="@+id/SettingTransactionAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs_1_000"
        android:textColor="@color/expense_red"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/SettingTransactionIcon" />


    <!-- Date -->

    <TextView
        android:id="@+id/SettingTransactionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_2_43_pm"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/SettingTransactionAmount"
        app:layout_constraintTop_toBottomOf="@id/SettingTransactionAmount" />


    <!-- Delete -->

    <ImageView
        android:id="@+id/SettingTransactionDelete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/delete"
        android:scaleType="centerInside"
        android:contentDescription="@string/delete_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SettingTransactionDate"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>