<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/card_background"
    android:paddingStart="20dp"
    android:paddingTop="14dp"
    android:paddingEnd="20dp"
    android:paddingBottom="14dp">

    <ImageView
        android:id="@+id/TransactionIcon"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TransactionCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/furniture"
        android:textColor="@color/text_primary"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/TransactionIcon"
        app:layout_constraintTop_toTopOf="@id/TransactionIcon"
        app:layout_constraintEnd_toStartOf="@id/TransactionAmount" />

    <TextView
        android:id="@+id/TransactionWallet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/cash"
        android:textColor="@color/text_secondary"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/TransactionCategory"
        app:layout_constraintTop_toBottomOf="@id/TransactionCategory"
        app:layout_constraintEnd_toStartOf="@id/TransactionAmount" />

    <TextView
        android:id="@+id/TransactionAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs_1_000"
        android:textColor="@color/expense_red"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/TransactionIcon" />

    <TextView
        android:id="@+id/TransactionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_2_43_pm"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TransactionAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>