<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/tvAccountName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cash"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/DeleteAccountIcon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/tvCurrency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rs_0"
        android:textSize="16sp"
        android:textColor="#777777"
        app:layout_constraintStart_toStartOf="@id/tvAccountName"
        app:layout_constraintEnd_toStartOf="@id/DeleteAccountIcon"
        app:layout_constraintTop_toBottomOf="@id/tvAccountName"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp" />

    <ImageView
        android:id="@+id/DeleteAccountIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/delete"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/delete_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>