<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".IncomeCategory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:paddingBottom="50dp"
        >

        <LinearLayout
            android:id="@+id/allowanceContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/allowance"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/allowance"
                android:textSize="30sp"
                />

            <Space
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/billsRadioButton"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/AwardContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/award"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/award"
                android:textSize="30sp"
                />

            <Space
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/clothRadioButton"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/BonusContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/bonus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/bonus"
                android:textSize="30sp"
                />

            <Space
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/EducationRadioButton"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/DividendContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/dividend"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/dividend"
                android:textSize="30sp"
                />

            <Space
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/EntertainmentRadioButton"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/InvestmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/investement"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/investment"
                android:textSize="30sp"
                />

            <Space
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/FitnessRadioButton"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lotteryContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/lottery"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/lottery"
                android:textSize="30sp"
                />

            <Space
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/FoodRadioButton"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/salaryContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/salary"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/salary"
                android:textSize="30sp"
                />

            <Space
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/GiftsRadioButton"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TipsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/tips"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/tips"
                android:textSize="30sp"
                />

            <Space
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/HealthRadioButton"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/BusinessContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/business"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/business"
                android:textSize="30sp"
                />

            <Space
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/FurnitureRadioButton"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/OthersContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/otherssvg"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/others"
                android:textSize="30sp"
                />

            <Space
                android:layout_width="2dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/PetRadioButton"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="false"
                />

        </LinearLayout>




    </LinearLayout>


</ScrollView>